--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -77,7 +77,7 @@
     position: fixed;
     left: 0;
     height: 92vh;
-    top: 14vh;
+    top: 10vh;
     background-color: var(--color-primary);
     width: 50vw;
 }
@@ -138,15 +138,20 @@
     background-image: url(../images/icon-croix.svg);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
     .content {
       grid-template-columns: repeat(2, 1fr);
       width: 100%;
     }
+
+    .nav__header{
+        top:7vh
+    }
   }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1025px) {
     .nav__header{
       width: 25vw;
+      top: 11vh;
     }
   }
