--- a/assets/style/_text.scss
+++ b/assets/style/_text.scss
@@ -31,6 +31,7 @@
 .mini--title{
     color: var(--color-text);
     font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
     font-size: 18px;
     margin: 10px 0;
     text-align: center;
@@ -90,7 +91,6 @@
     .title--big{
         color: var(--color-primary);
         font-size: 38px;
-        font-weight: 600;
         margin: 0;
     }
     
