--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -72,7 +72,7 @@
   position: fixed;
   left: 0;
   height: 92vh;
-  top: 14vh;
+  top: 10vh;
   background-color: var(--color-primary);
   width: 50vw; }
 
@@ -123,14 +123,17 @@
 .header--cross {
   background-image: url(../images/icon-croix.svg); }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .content {
     grid-template-columns: repeat(2, 1fr);
-    width: 100%; } }
-
-@media screen and (min-width: 1024px) {
+    width: 100%; }
   .nav__header {
-    width: 25vw; } }
+    top: 7vh; } }
+
+@media screen and (min-width: 1025px) {
+  .nav__header {
+    width: 25vw;
+    top: 11vh; } }
 
 * {
   margin: 0;
@@ -155,6 +158,9 @@
   align-items: center;
   margin-bottom: 25px; }
 
+.logo__intro {
+  padding: 10px; }
+
 .image__intro {
   width: 100%;
   height: auto;
@@ -166,7 +172,7 @@
   position: relative; }
 
 .image__rencontres {
-  width: 25%;
+  width: 40%;
   height: auto; }
 
 .bouton {
@@ -339,6 +345,86 @@ section figure {
   flex-direction: column;
   align-items: center; }
 
+.main-uikit {
+  margin: 18px; }
+
+.content-ui {
+  margin-top: 25%; }
+
+.content__list {
+  list-style-type: none; }
+
+.icons--size {
+  width: 25%;
+  padding: 15px 0;
+  margin-left: 35%;
+  margin-right: 35%; }
+
+.colors {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; }
+
+.couleur1 {
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-bg);
+  border: solid 1px var(--color-text);
+  border-radius: 5px;
+  margin-top: 30px; }
+
+.couleur2 {
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-primary);
+  border: solid 1px var(--color-primary);
+  border-radius: 5px;
+  margin-top: 30px; }
+
+.couleur3 {
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-secondary);
+  border: solid 1px var(--color-secondary);
+  border-radius: 5px;
+  margin-top: 30px; }
+
+.couleur4 {
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-fourth);
+  border: solid 1px var(--color-fourth);
+  border-radius: 5px;
+  margin-top: 30px; }
+
+.couleur5 {
+  height: 50px;
+  width: 50px;
+  background-color: var(--color-text);
+  border: solid 1px var(--color-text);
+  border-radius: 5px;
+  margin: 30px 0px; }
+
+.main-credits {
+  margin: 18px;
+  padding-bottom: 23%; }
+
+.content-credits {
+  margin-top: 25%; }
+
+.credlist {
+  margin-top: 20%;
+  list-style-type: none; }
+
+.lien__credits {
+  text-decoration: none;
+  color: var(--color-secondary);
+  margin-top: 30px; }
+
+.lien__credits:hover {
+  color: var(--color-primary);
+  border-bottom: solid 2px var(--color-primary); }
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .logo__intro {
     width: 60vw;
@@ -358,7 +444,21 @@ section figure {
   .icone {
     width: 10%; }
   .footer {
-    margin-top: 10%; } }
+    margin-top: 10%; }
+  .content-ui {
+    margin-top: 8%; }
+  .content__list {
+    list-style-type: none; }
+  .icons--size {
+    width: 60%;
+    padding: 20px 0; }
+  .ui-title {
+    padding-top: 30px; }
+  .main-credits {
+    margin: 25px;
+    padding-bottom: 17%; }
+  .content-credits {
+    margin-top: 20%; } }
 
 @media screen and (min-width: 1025px) {
   .logo__intro {
@@ -381,7 +481,7 @@ section figure {
     color: #2d4473;
     margin: 10px 0; }
   .image__rencontres {
-    padding-top: 17%;
+    padding-top: 10%;
     width: 40%;
     height: auto; }
   .rencontres {
@@ -423,11 +523,32 @@ section figure {
     width: 10vh !important;
     color: #2d4473 !important; }
   .footer {
-    margin-top: 7%; } }
+    margin-top: 7%; }
+  .content-ui {
+    margin-top: 7%; }
+  .main-credits {
+    margin: 15px;
+    padding-bottom: 0; }
+  .credlist {
+    margin-top: 0; }
+  .content-credits {
+    margin-top: 8%; } }
 
 /* css grid*/
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .content {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 5px;
+    max-width: 100%; }
+  .content-ui {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 8px;
+    grid-row-gap: 5px;
+    max-width: 100%; }
+  .content-credits {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-column-gap: 8px;
@@ -484,6 +605,18 @@ section figure {
   .nav__header {
     width: 25vw; }
   .content {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-column-gap: 18px;
+    grid-row-gap: 15px;
+    max-width: 100%; }
+  .content-ui {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-column-gap: 18px;
+    grid-row-gap: 15px;
+    max-width: 100%; }
+  .content-credits {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-column-gap: 18px;
@@ -565,6 +698,7 @@ section figure {
 .mini--title {
   color: var(--color-text);
   font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
   font-size: 18px;
   margin: 10px 0;
   text-align: center; }
@@ -614,7 +748,6 @@ section figure {
   .title--big {
     color: var(--color-primary);
     font-size: 38px;
-    font-weight: 600;
     margin: 0; }
   .title--medium {
     color: var(--color-secondary);
